--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "utils.js"
   ],
   "scripts": {
+    "lint": "npx eslint *.js -c ./node_modules/wet-run/.eslintrc.json",
     "test": "npm run test:types && wet test --coverage",
     "test:types": "tsc *.js --noEmit --checkJs --target esnext --moduleResolution nodenext --module nodenext",
     "dev": "wet serve --redirect :examples/vanilla/ --livereload --cors"
