--- a/package.json
+++ b/package.json
@@ -15,25 +15,27 @@
   "type": "module",
   "main": "responsive-video-element.js",
   "files": [
-    "responsive-video-element.d.ts",
-    "responsive-video-element.js",
-    "responsive-video-mixin.d.ts",
-    "responsive-video-mixin.js",
-    "utils.js"
+    "src",
+    "dist"
   ],
   "scripts": {
     "lint": "npx eslint *.js -c ./node_modules/wet-run/.eslintrc.json",
     "test": "npm run test:types && wet test --coverage",
     "test:types": "tsc *.js --noEmit --checkJs --target esnext --moduleResolution nodenext --module nodenext",
-    "dev": "wet serve --redirect :examples/vanilla/ --livereload --cors"
+    "dev": "npm run serve & npm run build:esm -- --watch=forever & npm run build:iife -- --watch=forever",
+    "serve": "wet serve --redirect :examples/vanilla/ --livereload --cors",
+    "build": "npm run build:esm && npm run build:iife && cp src/*.d.ts dist",
+    "build:esm": "esbuild \"src/*.js\" --format=esm --outdir=dist",
+    "build:iife": "esbuild \"src/responsive-video-*.js\" --bundle --format=iife --outdir=dist/iife"
   },
   "dependencies": {
-    "custom-media-element": "^1.2.2",
+    "custom-media-element": "^1.2.3",
     "media-tracks": "^0.3.0"
   },
   "devDependencies": {
+    "esbuild": "^0.20.1",
     "typescript": "^5.3.3",
-    "wet-run": "^1.0.3"
+    "wet-run": "^1.2.0"
   },
   "keywords": [
     "web component",
